--- a/style.css
+++ b/style.css
@@ -2,57 +2,139 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Quicksand", sans-serif;
+  font-family: "Manrope", sans-serif;
 }
 
 html {
   font-size: 62.5%;
 }
 
-.container {
+.header {
   width: 100%;
-  height: 100vh;
-  background-color: #12121f;
-  color: #eee;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.calendar {
-  width: 45rem;
-  height: 52rem;
-  background-color: #222227;
-  box-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.4);
-}
-
-.month {
-  width: 100%;
-  height: 12rem;
-  background-color: #167e56;
+  height: 10vh;
+  background-color: #ffffff;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
   text-align: center;
-  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
+  font-weight: 800;
 }
 
-.month i {
+.header i {
   font-size: 2.5rem;
   cursor: pointer;
 }
 
-.month h1 {
+.header h1 {
   font-size: 3rem;
-  font-weight: 400;
+  font-weight: 500;
   text-transform: uppercase;
   letter-spacing: 0.2rem;
   margin-bottom: 1rem;
 }
 
-.month p {
-  font-size: 1.6rem;
+.header p {
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.header .today-button, select, .nearby-buttons > button {
+  height: 40px;
+  width: 80px;
+  background-color: white;
+  border-radius: 5px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(218,220,224);
+  font-size: 15px;
+  font-weight: 500;
+  transition: background-color 0.2s;
+}
+
+.header .today-button:hover {
+  background-color: #faf9f9;
+}
+
+.header .today-button:active {
+  background-color: #ededed;
+}
+
+.header select {
+  width: 90px;
+  padding: 5px;
+}
+
+.nearby-buttons > button {
+  width: 60px;
+}
+
+.nearby-buttons .cal-logo {
+  background-color: rgb(180, 206, 236);
+}
+
+.container {
+  width: 100%;
+  height: 90vh;
+  background-color: #ffffff;
+  color: #000000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidebar {
+  width: 20vw;
+  height: 90vh;
+}
+
+.create-button {
+  background-color: #ffffff;
+  border: none;
+
+}
+
+.create-button {
+  align-items: center;
+  margin-left: 8px;
+  background: transparent;
+  border-radius: 24px;
+  box-shadow: 0 1px 2px 0 rgba(60,64,67,.302), 0 1px 3px 1px rgba(60,64,67,.149);
+  cursor: pointer;
+  display: flex;
+  height: 48px;
+  margin-top: 10px;
+  padding: 0 4px;
+  width: 147.88px;
+  border: solid;
+  border-color: rgb(242,250,255);
+  border-width: 1px;;
+  transition: background-color 0.2s, box-shadow 0.2s;
+}
+
+.create-button:hover {
+  background-color: rgba(242,250,255, 0.6);
+  box-shadow: 10px 10px 20px 0 rgba(60,64,67,.202), -10px 10px 20px 0 rgba(60,64,67,.202);
+}
+
+.create-button:active {
+  background-color: rgba(242, 250, 255, 0.358);
+}
+
+.create-button svg {
+  margin-left: 7px;
+}
+
+.create-button .create-text {
+  margin-left: 10px;
+  margin-right: 18px;
+  font-size: 13px;
+  font-weight: 600;
+}
+
+.calendar {
+  width: 80vw;
+  height: 90vh;
 }
 
 .weekdays {
@@ -67,11 +149,10 @@ html {
   font-size: 1.5rem;
   font-weight: 400;
   letter-spacing: 0.1rem;
-  width: calc(44.2rem / 7);
+  width: calc(80vw / 7);
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
 }
 
 .days {
@@ -82,20 +163,20 @@ html {
 }
 
 .days div {
-  font-size: 1.4rem;
-  margin: 0.3rem;
-  width: calc(40.2rem / 7);
-  height: 5rem;
+  font-size: 1.5rem;
+  width: calc(79.5vw / 7);
+  border-style:solid;
+  border-width: 1px;
+  height: 12rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-shadow: 0 0.3rem 0.5rem rgba(0, 0, 0, 0.5);
   transition: background-color 0.2s;
 }
 
 .days div:hover:not(.today) {
-  background-color: #262626;
-  border: 0.2rem solid #777;
+  background-color: #c9c9c9;
+  border: none;
   cursor: pointer;
 }
 
@@ -105,5 +186,7 @@ html {
 }
 
 .today {
-  background-color: #167e56;
+  background-color: rgb(25,103,210);
+  color: white;
+  border-radius: 5px;
 }
