--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 * {
+
+  --line-thickness: 1px;
+  --line-color: rgb(218,220,224);
+
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,32 +15,38 @@ html {
 
 .header {
   width: 100%;
-  height: 10vh;
   background-color: #ffffff;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 3fr 1.5fr 1.5fr 5fr 6fr;
+  grid-template-rows: 10vh;
   align-items: center;
-  padding: 0 2rem;
+  /* padding: 0 2rem; */
   text-align: center;
   font-weight: 800;
+}
+
+.header::after {
+  content: "";
+  background-color: var(--line-color);
+  position: absolute;
+  width: 100vw;
+  height: var(--line-thickness);
+  left: 0;
+  top: 10vh;
+}
+
+.header .title-icons {
+  display: grid;
+  grid-template-columns: 1fr 1fr 3fr;
+  justify-items: center;
+  align-items: center;
+  font-size: 22px;
+  font-weight: 500;
 }
 
 .header i {
   font-size: 2.5rem;
   cursor: pointer;
-}
-
-.header h1 {
-  font-size: 3rem;
-  font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  margin-bottom: 1rem;
-}
-
-.header p {
-  font-size: 22px;
-  font-weight: 500;
 }
 
 .header .today-button, select, .nearby-buttons > button {
@@ -52,6 +62,11 @@ html {
   transition: background-color 0.2s;
 }
 
+.header > .today-button {
+  justify-self: center;
+  align-self: center;
+}
+
 .header .today-button:hover {
   background-color: #faf9f9;
 }
@@ -60,9 +75,33 @@ html {
   background-color: #ededed;
 }
 
-.header select {
+.header > .chevrons {
+  justify-items: center;
+  align-items: center;
+}
+.header > .chevrons > * {
+  padding: 10px;
+}
+
+.header > .date {
+  text-align: left;
+  margin-left: 10px;
+  font-size: 22px;
+  font-weight: 500;
+}
+
+.header > .side-icons {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 2.3fr 3.3fr 1fr 1fr;
+  grid-template-rows: 10vh;
+  align-items: center;
+  justify-items: center;
+}
+
+.header > select {
   width: 90px;
   padding: 5px;
+  margin-left: 10px;
 }
 
 .nearby-buttons > button {
@@ -91,7 +130,6 @@ html {
 .create-button {
   background-color: #ffffff;
   border: none;
-
 }
 
 .create-button {
@@ -133,60 +171,89 @@ html {
 }
 
 .calendar {
+
+  --gap: 5px;
+  --line-offset: calc(var(--gap) / 2);
+
   width: 80vw;
   height: 90vh;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  /* grid-template-rows: repeat(6, 1fr); */
+  border: var(--line-thickness) solid var(--line-color);
+  gap: var(--gap);
+  overflow: hidden;
 }
 
-.weekdays {
-  width: 100%;
-  height: 5rem;
-  padding: 0 0.4rem;
-  display: flex;
-  align-items: center;
+.calendar > .date-box {
+  position: relative;
+  text-align: center;
+  padding: 10px;
+  font-family: "Roboto";
+  font-size: 14px;
+  font-weight: 600;
 }
 
-.weekdays div {
-  font-size: 1.5rem;
-  font-weight: 400;
-  letter-spacing: 0.1rem;
-  width: calc(80vw / 7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.calendar > .date-box::before,
+.calendar > .date-box::after {
+  content: "";
+  background-color: var(--line-color);
+  position: absolute;
 }
 
-.days {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0.2rem;
+.calendar > .date-box::after {
+  width: 100vw;
+  height: var(--line-thickness);
+  top: calc(var(--line-offset)*-1);
+  left: 0;
 }
 
-.days div {
-  font-size: 1.5rem;
-  width: calc(79.5vw / 7);
-  border-style:solid;
-  border-width: 1px;
-  height: 12rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 0.2s;
+.calendar > .date-box::before {
+  width: var(--line-thickness);
+  height: 100vh;
+  top: 0;
+  left: calc(var(--line-offset)*-1);
 }
 
-.days div:hover:not(.today) {
-  background-color: #c9c9c9;
+.mini-calendar {
+  margin-top: 10px;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: 7fr repeat(7, 1fr);
+  height: 40vh;
+  width: 20vw;
+}
+
+.date-box div,
+.mini-calendar div:not(.mini-header) {
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  padding: 3px 0;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+.date-box div:hover:not(.today),
+.mini-calendar div:hover:not(.today) {
+  background-color: #ededed;
   border: none;
   cursor: pointer;
 }
 
 .prev-date,
 .next-date {
-  opacity: 0.5;
+  color: rgb(146, 151, 154);
 }
 
 .today {
-  background-color: rgb(25,103,210);
+  background-color: rgba(26,115,232);
   color: white;
   border-radius: 5px;
+}
+
+.today:hover {
+  background-color: rgb(6,95,212);
+  border: none;
+  cursor: pointer;
 }
