--- a/style.css
+++ b/style.css
@@ -461,3 +461,149 @@ html {
 .check-container input:checked ~ .checkmark.third {
   background-color: #0047a8;
 }
+
+.task-window {
+  background-color: white;
+  border: none;
+  position: absolute;
+  left: 20vw;
+  top: 20vh;
+  box-shadow: 5px 5px 10px rgb(215, 215, 215);
+  border-radius: 5px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.task-window-header {
+  width: 100%;
+  height: 10%;
+  background-color: rgb(240, 240, 240);
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  display: flex;
+  justify-content: right;
+  padding: 3px 5px 3px 6px;
+}
+
+.task-window-close-button {
+  width: 8%;
+  border-radius: 50%;
+  text-align: center;
+  padding-top: 2%;
+  padding-bottom: 2%;
+}
+
+.task-window-close-button:hover {
+  background-color: rgb(230, 230, 230);
+}
+
+.title-text {
+  border: none;
+  width: 100%;
+  height: 10%;
+  font-size: 20px;
+  font-weight: 500;
+  margin-left: 20%;
+  margin-right: 5%;
+}
+
+.event-task-buttons {
+  width: 100%;
+  height: 15%;
+  margin-left: 20%;
+  margin-right: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+.event-button {
+  width: 60px;
+  height: 40px;
+  color:rgb(93, 93, 93);
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 14px;
+  font-weight: 800;
+  transition: background-color 0.2s;
+}
+.event-button:hover {
+  background-color:rgb(240, 240, 240);
+}
+
+.task-button {
+  width: 60px;
+  height: 40px;
+  color: #1967D2;
+  background-color: rgb(25, 103, 210, 0.1);
+  border: none;
+  border-radius: 5px;
+  text-align: center;
+  margin-left: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 14px;
+  font-weight: 800;
+  transition: background-color 0.2s;
+}
+.task-button:hover {
+  background-color:rgb(25, 103, 210, 0.2);
+}
+
+.date-display-section {
+  width: 100%;
+  height: 10%;
+  margin-top: 10px;
+  margin-left: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.date-display-section > i {
+  width: 10%;
+}
+.date-display {
+  width: 70%;
+}
+.add-time-button {
+  width: 20%;
+}
+
+.description-section {
+  width: 100%;
+  height: 25%;
+  margin-top: 5px;
+  margin-left: 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.description-section > i {
+  width: 10%;
+}
+.description-text {
+  border: none;
+  width: 80%;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 90px;
+}
+
+.task-section {
+  width: 100%;
+  height: 10%;
+  margin-top: 10px;
+  margin-left: 20%;
+}
+
+.add-task-div {
+  width: 100%;
+  height: 10%;
+}
+
+.add-task {
+  width: 60px;
+  height: 30px;
+}
