--- a/style.css
+++ b/style.css
@@ -503,14 +503,14 @@ html {
   height: 10%;
   font-size: 20px;
   font-weight: 500;
-  margin-left: 20%;
+  margin-left: 65px;
   margin-right: 5%;
 }
 
 .event-task-buttons {
   width: 100%;
   height: 15%;
-  margin-left: 20%;
+  margin-left: 70px;
   margin-right: 5%;
   display: flex;
   flex-wrap: wrap;
@@ -570,6 +570,7 @@ html {
 }
 .add-time-button {
   width: 20%;
+  font-size: 12px;
 }
 
 .description-section {
@@ -586,6 +587,7 @@ html {
 .description-text {
   border: none;
   width: 80%;
+  height: 100px;
   font-size: 15px;
   font-weight: 400;
   line-height: 90px;
@@ -595,15 +597,23 @@ html {
   width: 100%;
   height: 10%;
   margin-top: 10px;
-  margin-left: 20%;
+  margin-left: 20px;
+}
+
+.task-section > i {
+  width: 10%;
 }
 
 .add-task-div {
   width: 100%;
   height: 10%;
+  text-align: right;
 }
 
 .add-task {
   width: 60px;
   height: 30px;
+  margin-right: 10px;
+  background-color: rgb(26,115,232);
+  color: white;
 }
